--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 @import url("fontawesome-all.min.css");
 
-/*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -2054,10 +2048,11 @@ input, select, textarea {
 						line-height: 2.75em;
 						font-size: 1.5em;
 						z-index: 1;
-						-moz-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-webkit-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-ms-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						transition: width .15s ease-in-out, padding-right .15s ease-in-out;
+						-moz-transition: width 1s ease-in-out, padding-right .15s ease-in-out;
+						-webkit-transition: width 1s ease-in-out, padding-right .15s ease-in-out;
+						-ms-transition: width 1s ease-in-out, padding-right .15s ease-in-out;
+						transition: width 1s ease-in-out, padding-right .15s ease-in-out;
+						transition: 1s;
 					}
 
 						#main > .panel.intro .pic .arrow:before {
@@ -2074,6 +2069,8 @@ input, select, textarea {
 					#main > .panel.intro .pic:hover .arrow {
 						width: 3em;
 						padding-right: 0.25em;
+						border-radius: 30px 0px 0px 30px;
+						transition: 1s;
 					}
 
 				#main > .panel.intro header {
